@@ -55,3 +55,8 @@ override_dh_makeshlibs:
 
 override_dh_strip:
 	dh_strip --dbgsym-migration='evolution-data-server-dbg (<< 3.20.2-2~)'
+
+override_dh_auto_test:
+ifeq (, $(filter nocheck, $(DEB_BUILD_OPTIONS)))
+	$(MAKE) check || ( find . -name test-suite.log -exec cat {} \;; exit 0; )
+endif
