@@ -5,6 +5,8 @@ evolution-data-server (3.20.4-1) UNRELEASED; urgency=medium
     The shared libraries no longer embed any RPATH so this is not needed
     anymore.
   * Convert from cdbs to dh.
+  * Don't make test-suite failures fatal. Dump the contents of the
+    test-suite.log files to stdout in case of an error.
 
  -- Michael Biebl <biebl@debian.org>  Tue, 07 Jun 2016 19:28:42 +0200
 
